--- a/AngularApp/src/app/dashboard/advert/advert-create/advert-create.component.html
+++ b/AngularApp/src/app/dashboard/advert/advert-create/advert-create.component.html
@@ -25,7 +25,7 @@
             <label for="countrySelect">Tara de origine:</label>
             <select class="form-control"  formControlName="countrySelect" id="countrySelect" (change)="countryChanged($event.target.value)">
                 <option selected disabled>Alege o tara</option>
-                <option *ngFor="let p of countryList" value="{{p.country_id}}">{{p.name}}</option>
+                <option *ngFor="let p of countryList" value="{{p.id}}">{{p.name}}</option>
             </select>
             <div *ngIf="f.countrySelect.dirty || f.countrySelect.touched">
                 <small class="text-danger" *ngIf="selectedCountry == -1">Tara de origine este obligatorie</small>
@@ -88,7 +88,7 @@
             <label for="brandSelect">Brand:</label>
             <select class="form-control"  formControlName="brandSelect" id="brandSelect" (change)="brandChanged($event.target.value)">
                 <option selected disabled>Alege un brand</option>
-                <option *ngFor="let p of brandsList" value="{{p.brand_id}}">{{p.name}}</option>
+                <option *ngFor="let p of brandsList" value="{{p.id}}">{{p.name}}</option>
             </select>
             <div *ngIf="f.brandSelect.dirty || f.brandSelect.touched">
                 <small class="text-danger" *ngIf="selectedBrand == -1">Brandul este obligatoriu</small>
@@ -108,7 +108,7 @@
             <label for="bsSelect">Caroserie:</label>
             <select class="form-control"  formControlName="bsSelect" id="bsSelect" (change)="bsChanged($event.target.value)">
                 <option selected disabled>Alege o caroserie</option>
-                <option *ngFor="let p of bsList" value="{{p.bs_id}}">{{p.name}}</option>
+                <option *ngFor="let p of bsList" value="{{p.id}}">{{p.name}}</option>
             </select>
             <div *ngIf="f.bsSelect.dirty || f.bsSelect.touched">
                 <small class="text-danger" *ngIf="selectedBs == -1">Caroseria este obligatorie</small>
