finish advert and user

--- a/AngularApp/src/app/shared/advert-filter/advert-filter.component.html
+++ b/AngularApp/src/app/shared/advert-filter/advert-filter.component.html
@@ -19,7 +19,7 @@
         <label for="modelSelect">Model:</label>
         <select class="form-control"  formControlName="modelSelect" id="modelSelect" (change)="modelChanged($event.target.value)">
             <option value="-1" selected disabled>Alege un model</option>
-            <option *ngFor="let p of modelListToShow" value="{{p.model_id}}">{{p.name + ' ' + p.generation}}</option>
+            <option *ngFor="let p of modelListToShow" value="{{p.id}}">{{p.name + ' ' + p.generation}}</option>
         </select>
     </div>
 
